--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -106,6 +106,7 @@
 .sidebar.show-menu .menu-link {
     transform: scaleY(1);
     opacity: 1;
+    text-transform: uppercase;
 }
 
 .sidebar.show-menu .menu-link:nth-child(1) { transition-delay: 0.2s; }
