updated the universal font and uppercase for menu nav and sidebar

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .menu-btn {
     display: none;
 }
@@ -100,13 +102,15 @@
     transform: scaleY(0);
     opacity: 0;
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    font-family: 'Noto Sans KR', sans-serif !important;
+    text-transform: uppercase !important;
 }
 
 /* Expanding menu links */
 .sidebar.show-menu .menu-link {
     transform: scaleY(1);
     opacity: 1;
-    text-transform: uppercase;
+    text-transform: uppercase !important;
 }
 
 .sidebar.show-menu .menu-link:nth-child(1) { transition-delay: 0.2s; }
