--- a/app/chandigarh-tourist-map/styles.css
+++ b/app/chandigarh-tourist-map/styles.css
@@ -257,7 +257,7 @@ header h1 {
 }
 
 #map {
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -329,6 +329,7 @@ header h1 {
 
 /* Hide desktop sidebar on mobile */
 @media (max-width: 767px) {
+
     .sidebar {
         display: none;
     }
@@ -414,9 +415,6 @@ header h1 {
         width: 100%;
     }
     
-    #map {
-        height: 500px;
-    }
 }
 
 @media (max-width: 768px) {
